# H4

./: CMakeLists.txt
Bencode/: CMakeLists.txt
Bencode/classes/: Bencode.cpp
Bencode/include/: BNode.hpp  Bencode.hpp  BencodeDestinations.hpp  BencodeSources.hpp  Bencoding.hpp
Bencode/tests/: Bencode_tests.cpp  Bencode_tests.hpp  Bencode_tests_decode.cpp  Bencode_tests_encode.cpp  Bencode_tests_main.cpp  CMakeLists.txt  catch.cpp
JSON/: CMakeLists.txt
JSON/classes/: JSON.cpp  JSONTranslator.cpp
JSON/include/: JNode.hpp  JSON.hpp  JSONDestinations.hpp  JSONSources.hpp  JSONTranslator.hpp
JSON/tests/: CMakeLists.txt  JSON_tests.cpp  JSON_tests.hpp  JSON_tests_decode.cpp  JSON_tests_encode.cpp  JSON_tests_main.cpp  JSON_tests_parse.cpp  JSON_tests_stringify.cpp
JSON/tests/testData/: multifileerror.torrent  singlefileerror.torrent  testfile003.json  testfile005.json
XML/: CMakeLists.txt  LICENSE.txt
XML/classes/: DTD.cpp  DTD_parse.cpp  DTD_parse_content.cpp  DTD_parse_external.cpp  DTD_validate.cpp  XML.cpp  XMLValidator.cpp  XML_DTD.cpp  XML_DTD_parse.cpp  XML_core.cpp  XML_dtd_parse.cpp  XML_dtd_validate.cpp  XML_entity_reference.cpp  XML_parse.cpp  XML_stringify.cpp  XML_utility.cpp  XML_validation.cpp  test.xml
XML/include/: DTD.hpp  DTDElement.hpp  IDestination.hpp  ISource.hpp  XML.hpp  XMLDestinations.hpp  XMLEntityMapper.hpp  XMLNode.hpp  XMLSources.hpp  XMLValidator.hpp  XML_core.hpp  XNode.hpp
XML/tests/: CMakeLists.txt  DTD_parse.cpp  DTD_parse_attributes.cpp  DTD_parse_entity.cpp  DTD_parse_misc.cpp  DTD_parse_tags.cpp  DTD_stringify.cpp  DTD_validate.cpp  DTD_validate_attributes.cpp  DTD_validate_elements.cpp  DTD_validation.cpp  IDestination.cpp  ISource.cpp  XML_parse_declaration.cpp  XML_parse_pi.cpp  XML_parse_tags.cpp  XML_parse_unicode.cpp  XML_tests.hpp  XML_tests_IDestination.cpp  XML_tests_dtd_parse.cpp  XML_tests_dtd_stringify.cpp  XML_tests_dtd_validate.cpp  XML_tests_main.cpp  XML_tests_parse.cpp  XML_tests_parse_comments.cpp  XML_tests_parse_entities.cpp  XML_tests_parse_files.cpp  XML_tests_parse_misc.cpp  XML_tests_parse_pi.cpp  XML_tests_stringify.cpp
XML/tests/DTD/: DTD_parse_attributes.cpp  DTD_parse_entity.cpp  DTD_parse_misc.cpp  DTD_parse_tags.cpp  DTD_validate_attributes.cpp
XML/tests/IO/: ISource.cpp
XML/tests/XML/: XML_parse_attributes.cpp  XML_parse_cdata.cpp  XML_parse_declaration.cpp  XML_parse_namespace.cpp  XML_parse_root.cpp
XML/tests/testData/: conditional01.dtd  longtext.txt  report01.dtd  report02.dtd  testfile003.xml  testfile005.xml  testfile006.xml  testfile008.txt  testfile011.xml
